# EVE-Library

./: .clang-format  CMakeLists.txt  LICENSE  README.md  displays.h  eve.c  eve.h
CMake/: Findlibftdi.cmake  macros.cmake
Include/eve/: Eve2_81x.h  MatrixEve2Conf.h  ST7789V.h  hw_api.h  touch_cap_811.h
src/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/basic_eve_demo/: CMakeLists.txt  basic_eve_demo.c
src/demos/custom_font_demo/: CMakeLists.txt  MONOSPACE821BT_64_ASTC.glyph.h  MONOSPACE821BT_64_ASTC.xfont.h  custom_font_demo.c
src/demos/png_transparency_demo/: CMakeLists.txt  png_transparency_demo.c
src/eve/: CMakeLists.txt  Eve2_81x.c  ST7789V.c  eve_export.h
src/usb_bridge/: CMakeLists.txt  usb_bridge.c  usb_bridge_libftdi.c
